tests/unit/default/syntax-error/023-create-table-parens-name-colon-type-parens.e.t
---- IN ----
+%table(id:int(
---- OUT ----
---- ERR ----
syntax: expected `)` after `+%table(id:int(` instead of EOL at position 15 - at line 1
---- EXIT ----
1
